<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:paddingBottom="15dp"
    android:fadeScrollbars="true"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android" >
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Menu.DinnerActivity"
    android:focusable="true"
    android:focusableInTouchMode="true">
    <requestFocus/>

    <EditText
        android:id="@+id/date_dinner"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Date"
        android:background="@drawable/edittext_background"
        android:padding="5dp"/>
    <EditText
        android:id="@+id/location_dinner"
        android:layout_marginTop="7dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:ems="10"
        android:layout_height="wrap_content"
        android:hint="Location"
        android:background="@drawable/edittext_background"
        android:padding="5dp"/>
    <TextView
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/indiviual"
        android:textColor="@color/colorBlack"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/txt_dinner"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Dinner"
        android:textColor="@color/colorBlue"
        android:textSize="15sp"/>

    <EditText
        android:id="@+id/item1_dinner"
        android:ems="10"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/item1"
        android:background="@drawable/edittext_background"
        android:padding="5dp"/>
    <EditText
        android:id="@+id/item2_dinner"
        android:layout_marginTop="7dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/item2"
        android:background="@drawable/edittext_background"
        android:padding="5dp"/>
    <EditText
        android:id="@+id/item3_dinner"
        android:ems="10"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="7dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/item3"
        android:background="@drawable/edittext_background"
        android:padding="5dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp">

    <Button
        android:id="@+id/save_dinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/savetodiarry"
        android:layout_gravity="left"
        android:textColor="#fff"
        android:layout_weight=".5"
        android:background="@drawable/buttonshape"
        style="@style/Widget.AppCompat.Button.Colored"

        />
        <Button
            android:id="@+id/btnShare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Share"
            android:layout_weight=".5"
            android:layout_marginLeft="3dp"
            android:layout_gravity="center"
            android:textColor="#fff"
            android:background="@drawable/buttonshape"
            style="@style/Widget.AppCompat.Button.Colored"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/txt_date"
        android:layout_marginTop="5dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBlack"
        android:fontFamily="serif"
        android:textSize="12sp"/>
    <TextView
        android:id="@+id/txt_location"
        android:layout_marginTop="1dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:textColor="@color/colorBlack"
        android:textSize="12sp"/>
    <TextView
        android:id="@+id/txt_item1"
        android:layout_marginTop="1dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBlack"
        android:fontFamily="serif"
        android:textSize="12sp"/>
    <TextView
        android:id="@+id/txt_item2"
        android:layout_marginTop="1dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:textColor="@color/colorBlack"
        android:textSize="12sp"/>
    <TextView
        android:id="@+id/txt_item3"
        android:layout_marginTop="1dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:textColor="@color/colorBlack"
        android:textSize="12sp"/>

</LinearLayout>
</ScrollView>